# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
backend = "setuptools.build_meta"

[project]
name = "geode"
version = "0.0.1"
description = "Classes and methods to help with the creation of training datasets for deep-learning models."
readme = "README.md"
license = {file="LICENSE"}

authors = [
    {name = "Matt Reichenbach", email="matthew.p.reichenbach@usace.army.mil"},
]
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["deep-learning", "training", "dataset", "geospatial"]
dependencies = [
    "gdal",
    "numpy",
    "os"
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/mpreichenbach/geode"
